Fix header links not right aligned in chrome

--- a/styles.scss
+++ b/styles.scss
@@ -189,7 +189,7 @@ p {
       ul {
         display: flex;
         align-items: center;
-        justify-content: right;
+        justify-content: flex-end;
 
         img {
           display: none;
@@ -559,6 +559,7 @@ header .blur-bg.active {
   &__message {
     display: flex;
     flex-direction: column;
+    height: 100%;
     font-weight: 600;
     color: var(--color-tertiary);
 
